Fix Spring AI API Key loading, Maven structure, and deprecations